<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/nested_scroll"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appbar"
        android:layout_height="wrap_content">
        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:id="@+id/toolbar_title"
                    android:text="@string/app_name"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:visibility="invisible"
                    android:id="@+id/toolbar_edit"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="text"
                    android:text=""/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@null"
                    android:id="@+id/toolbar_search"
                    android:src="@drawable/ic_search"/>
            </LinearLayout>

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/not_found"
        android:id="@+id/txt_notfound"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progb"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_nested"
        android:layout_below="@+id/appbar"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycleview"
            android:nestedScrollingEnabled="false"
            android:layout_weight="1"
            tools:listitem="@layout/movie_items"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progb_pagi"
            android:visibility="gone"
            android:layout_gravity="center"
            />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>