...
            android:weightSum="5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="Ures"
                android:gravity="center_vertical"
                android:id="@+id/movie_item_title"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
...
